# assimp-sys

./: .travis.yml  Cargo.toml  appveyor.yml  build.rs  search-index.js
assimp_sys/: constant.AIIMPORTERFLAG_EXPERIMENTAL.html  constant.AIIMPORTERFLAG_LIMITED_SUPPORT.html  constant.AIIMPORTERFLAG_SUPPORT_BINARY_FLAVOUR.html  constant.AIIMPORTERFLAG_SUPPORT_COMPRESSED_FLAVOUR.html  constant.AIIMPORTERFLAG_SUPPORT_TEXT_FLAVOUR.html  constant.AIPRIMITIVETYPE_LINE.html  constant.AIPRIMITIVETYPE_POINT.html  constant.AIPRIMITIVETYPE_POLYGON.html  constant.AIPRIMITIVETYPE_TRIANGLE.html  constant.AIPROCESS_CALC_TANGENT_SPACE.html  constant.AIPROCESS_CONVERT_TO_LEFT_HANDED.html  constant.AIPROCESS_DEBONE.html  constant.AIPROCESS_FIND_DEGENERATES.html  constant.AIPROCESS_FIND_INSTANCES.html  constant.AIPROCESS_FIND_INVALID_DATA.html  constant.AIPROCESS_FIX_INFACING_NORMALS.html  constant.AIPROCESS_FLIP_UVS.html  constant.AIPROCESS_FLIP_WINDING_ORDER.html  constant.AIPROCESS_GEN_NORMALS.html  constant.AIPROCESS_GEN_SMOOTH_NORMALS.html  constant.AIPROCESS_GEN_UV_COORDS.html  constant.AIPROCESS_IMPROVE_CACHE_LOCALITY.html  constant.AIPROCESS_JOIN_IDENTICAL_VERTICES.html  constant.AIPROCESS_LIMIT_BONE_WEIGHTS.html  constant.AIPROCESS_MAKE_LEFT_HANDED.html  constant.AIPROCESS_OPTIMIZE_GRAPH.html  constant.AIPROCESS_OPTIMIZE_MESHES.html  constant.AIPROCESS_PRE_TRANSFORM_VERTICES.html  constant.AIPROCESS_REMOVE_COMPONENT.html  constant.AIPROCESS_REMOVE_REDUNDANT_MATERIALS.html  constant.AIPROCESS_SORT_BY_PTYPE.html  constant.AIPROCESS_SPLIT_BY_BONE_COUNT.html  (+157 more)
src/: lib.rs
(+140 files in other folders)
